Changed to winter 2023

--- a/recruitment.html
+++ b/recruitment.html
@@ -68,7 +68,7 @@
                 <div class="section-box">
                     
                     <div class="section-title indented">
-                        <h2>FALL 2022 RECRUITMENT</h2>
+                        <h2>WINTER 2023 RECRUITMENT</h2>
                     </div>
                     
                     <!--div class="buffer-mini"></div>
@@ -149,7 +149,7 @@
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: B1580 </p>
-                            <p2> Come learn about PGN and our recruiting process! </p2>
+                            <p2> Come meet our members! </p2>
 
                         </div>
                     </div>
