festifall, president, members

--- a/recruitment.html
+++ b/recruitment.html
@@ -96,7 +96,7 @@
                     </div>          
         
                                  
-                    <div class="indented schedule-event">
+                   <!-- <div class="indented schedule-event">
                         <img src="schedule-data/festifall-pic.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Festifall </h3>
