took out members other than eboard

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                             <td text-align="left">
                                 <div class="indented">
                                     <div class="img-card">
-                                        <img src="pgn-bro-list-data/president-welcome.jpg" alt="Slide 2">
+                                        <img src="pgn-bro-list-data/pgn-bro-list-jessie-beck.jpg" alt="Slide 2">
                                     </div>
-									<h3 class="v-indented">Charlie Weissman </h3>
+									<h3 class="v-indented">Jessie Beck </h3>
                                 </div>
                             </td>
                             <td text-align="left">
@@ -156,7 +156,7 @@
                                     </p>
 									
 									<p>
-										Best,<br /> Charlie Weissman
+										Best,<br /> Jessie Beck
 									</p>
                                 </div>
                             </td>
@@ -303,7 +303,7 @@
                     <h2>FOLLOW US</h2>
                     
                     <div>
-                        <a class="fa fa-envelope-o" href="mailto:pgneboard2022@umich.edu"></a>
+                        <a class="fa fa-envelope-o" href="mailto:pgneboard2023@umich.edu"></a>
                         <a class="fa fa-facebook" href="https://www.facebook.com/PGNMichigan/"></a>
                         <a class="fa fa-linkedin" href="https://www.linkedin.com/company/phi-gamma-nu-delta-phi/"></a>
                         <a class="fa fa-instagram" href="https://instagram.com/pgnuofm?igshid=1fr8cdc093qne"></a>
