--- a/recruitment.html
+++ b/recruitment.html
@@ -114,7 +114,7 @@
                         <img src="schedule-data/meet-the-brothers.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> BBA Meet the Clubs </h3>
-                            <h4> Wednesday, September 7th | TBD |</h4>
+                            <h4> Wednesday, January 11th | 6-8pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: Ross Winter Garden</p>
@@ -130,7 +130,7 @@
                         <img src="pgn-prof-slides/pgn-prof-slides-3.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Mass Meeting </h3>
-                            <h4> Friday, September 9th | 6-7pm EST |</h4>
+                            <h4> Friday, January 13th | 6-7:30pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: R2210 </p>
@@ -144,12 +144,12 @@
                     <div class="indented schedule-event">
                         <img src="pgn-bro-slides/pgn-bro-slides-3.jpg" alt=""/>
                         <div class="schedule-desc">
-                            <h3> Meet the Brothers </h3>
-                            <h4> Sunday, September 11th | 2-3pm EST |</h4>
+                            <h3> Professional Panel </h3>
+                            <h4> Sunday, January 15th | 6-7:30pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: B1580 </p>
-                            <p2> Come meet our members! </p2>
+                            <p> Location: R1240 </p>
+                            <p2> Come learn more about the professional careers of our brothers! </p2>
 
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <img src="schedule-data/dei-event.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> DEI Event </h3>
-                            <h4> Monday, September 12th | 8:30-9:30pm EST |</h4>
+                            <h4> Tuesday, January 17th | 7:30-9pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: Robertson Auditorium </p>
@@ -189,14 +189,14 @@
                         <img src="schedule-data/speed-dating.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Speed Dating </h3>
-                            <h4> Session 1: Wednesday, September 14th | 8-9pm EST |</h4>
-                            <h4> Session 2: Wednesday, September 14th | 9-10pm EST |</h4>
-                            <h4> Session 3: Thursday, September 15th | 6-7pm EST |</h4>
-                            <h4> Session 4: Thursday, September 15th | 7-8pm EST |</h4>
+                            <h4> Session 1: Wednesday, January 18th | 8-9pm EST |</h4>
+                            <h4> Session 2: Wednesday, January 18th | 9-10pm EST |</h4>
+                            <h4> Session 3: Thursday, January 19th | 7-8pm EST |</h4>
+                            <h4> Session 4: Thursday, January 19th | 8-9pm EST |</h4>
                             <p> Attendance Required (<u>Attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">ONE</span> session only</u>) </p>
                             <p> Dresscode: Business Casual </p>
-                            <p> Location (Sessions 1 & 2): R1230 </p>
-                            <p> Location (Sessions 3 & 4): R0240 </p>
+                            <p> Location (Sessions 1 & 2): R2220 </p>
+                            <p> Location (Sessions 3 & 4): R2240 </p>
                         </div>
                     </div> 
                     
@@ -208,8 +208,8 @@
                         <img src="schedule-data/app-due.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
-                            <h4> Thursday, September 15th | 11:59pm EST | 
-                             <u><a href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">Apply Here (Application will be open Friday, September 9th) </a></u>
+                            <h4> Thursday, January 19th | 11:59pm EST | 
+                             <u><a href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">Apply Here (Application will be open TBD) </a></u>
                             </h4>
                             <p> Required </p>
                         </div>
