--- a/recruitment.html
+++ b/recruitment.html
@@ -127,7 +127,7 @@
                     <hr class="event-divider">
 
                     <div class="indented schedule-event">
-                        <img src="pgn-prof-slides/pgn-prof-slides-3.jpg" alt=""/>
+                        <img src="pgn-bro-slides/pgn-bro-slides-3.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Mass Meeting </h3>
                             <h4> Friday, January 13th | 6-7:30pm EST |</h4>
@@ -142,7 +142,7 @@
                     <hr class="event-divider">
 
                     <div class="indented schedule-event">
-                        <img src="pgn-bro-slides/pgn-bro-slides-3.jpg" alt=""/>
+                        <img src="pgn-prof-slides/pgn-prof-slides-3.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Professional Panel </h3>
                             <h4> Sunday, January 15th | 6-7:30pm EST |</h4>
@@ -223,7 +223,7 @@
                         <img src="schedule-data/team-building.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> ??? </h3>
-                            <h4> Sunday, September 18th | 5-7pm EST |</h4>
+                            <h4> Sunday, January 22nd | 5-8pm EST |</h4>
                             <p> Invite Only </p>
                         </div>
                     </div>
