--- a/recruitment.html
+++ b/recruitment.html
@@ -53,7 +53,7 @@
         
         <div id="navbar" class="animate-bottom">
             <a href="index.html"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
-            <a class="active navbar-right" href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">APPLY NOW</a>
+            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLSf4SSZ1LzltYiTNYt1vxDAcWhu3q8ENSDxLnRh4pRd4NCl1DA/viewform?usp=sf_link" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="#top">RECRUITMENT</a>
             <a class="active navbar-right" href="members.html">MEMBERS</a>
             <a class="active navbar-right" href="index.html#about-us">ABOUT US</a>
