--- a/recruitment.html
+++ b/recruitment.html
@@ -189,14 +189,11 @@
                         <img src="schedule-data/speed-dating.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Speed Dating </h3>
-                            <h4> Session 1: Wednesday, January 18th | 8-9pm EST |</h4>
-                            <h4> Session 2: Wednesday, January 18th | 9-10pm EST |</h4>
-                            <h4> Session 3: Thursday, January 19th | 7-8pm EST |</h4>
-                            <h4> Session 4: Thursday, January 19th | 8-9pm EST |</h4>
+                            <h4> Session 1: Wednesday, January 18th | 8-10pm EST |</h4>
+                            <h4> Session 2: Thursday, January 19th | 8-10pm EST |</h4>
                             <p> Attendance Required (<u>Attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">ONE</span> session only</u>) </p>
                             <p> Dresscode: Business Casual </p>
-                            <p> Location (Sessions 1 & 2): R2220 </p>
-                            <p> Location (Sessions 3 & 4): R2240 </p>
+                            <p> Location: R2220 & R2240 </p>
                         </div>
                     </div> 
                     
