--- a/recruitment.html
+++ b/recruitment.html
@@ -82,7 +82,7 @@
                 </div>
                 
                 <div class="email-list">
-                    <a href="https://forms.gle/ZKtSGhJyM5JZge2h7" target="_blank">JOIN OUR EMAIL LIST FOR UPDATES!</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf4SSZ1LzltYiTNYt1vxDAcWhu3q8ENSDxLnRh4pRd4NCl1DA/viewform?usp=sf_link" target="_blank">JOIN OUR EMAIL LIST FOR UPDATES!</a>
                 </div>
                 
             </section>
