--- a/members.html
+++ b/members.html
@@ -19,7 +19,7 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
             
-        <template class="bro-list-data" id="bro-list-eboard-names">Faizan Bhagat;Charles Lewis;Leah George;Herman Wu;Dani Cerutti;Alan Yang</template>
+        <template class="bro-list-data" id="bro-list-eboard-names">Jessie Beck;Charles Lewis;Leah George;Herman Wu;Dani Cerutti;Alan Yang</template>
         <template class="bro-list-data" id="bro-list-eboard-titles">President;VP External;VP Internal;VP Finance;VP Membership;VP Communications</template>
         <template class="bro-list-data" id="bro-list-eboard-years">24;24;24;24;23;24</template>
         <template class="bro-list-data" id="bro-list-eboard-texts">
