--- a/recruitment.html
+++ b/recruitment.html
@@ -133,7 +133,7 @@
                             <h4> Friday, January 13th | 6-7:30pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: R2210 </p>
+                            <p> Location: Robertson Auditorium </p>
                             <p2> Come learn about PGN and our recruiting process! </p2>
 
                         </div>
