--- a/recruitment.html
+++ b/recruitment.html
@@ -206,7 +206,7 @@
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
                             <h4> Thursday, January 19th | 11:59pm EST | 
-                             <u><a href="https://forms.gle/rhSNU6TPgrsXBfAs5" target="_blank">Apply Here (Application will be open TBD) </a></u>
+                             <u><a href="https://forms.gle/rhSNU6TPgrsXBfAs5" target="_blank">Apply Here (Application Now Open!) </a></u>
                             </h4>
                             <p> Required </p>
                         </div>
