--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             }
         </script>
         
-        <div id="navbar" class="animate-bottom">
+        <div id="navbar" class="animate-bottom">    
             <a href="#top"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
-            <a class="active navbar-right" href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">APPLY NOW</a>
+            <a class="active navbar-right" href="https://forms.gle/rhSNU6TPgrsXBfAs5" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="recruitment.html">RECRUITMENT</a>
             <a class="active navbar-right" href="members.html">MEMBERS</a>
             <a class="active navbar-right" href="#about-us">ABOUT US</a>
@@ -78,7 +78,7 @@
                     </h2>
 
 					
-                    <a href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">
+                    <a href="https://forms.gle/rhSNU6TPgrsXBfAs5" target="_blank">
                         APPLY NOW
                     </a>
 	
