--- a/recruitment.html
+++ b/recruitment.html
@@ -193,7 +193,7 @@
                             <h4> Session 2: Thursday, January 19th | 7-9pm EST |</h4>
                             <p> Attendance Required (<u>Attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">ONE</span> session only</u>) </p>
                             <p> Dresscode: Business Casual </p>
-                            <p> Location: R2220 & R2240 </p>
+                            <p> Location: R2220</p>
                         </div>
                     </div> 
                     
